--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Aula 01 HTML5</title>
   </head>
   <body>
+    <nav>
+      <p>Minha página</p>
+      <ul>
+        <li>
+          <a href="#servicos">SERVIÇOS</a>
+        </li>
+        <li>
+          <a href="#clientes">CLIENTES</a>
+        </li>
+        <li>
+          <a href="#parceiros">PARCEIROS</a>
+        </li>
+        <li>
+          <a href="#time">TIME</a>
+        </li>
+        <li>
+          <a href="#contato">CONTATO</a>
+        </li>
+      </ul>
+    </nav>
     <header>
       <h1>Minha página</h1>
       <p>
@@ -12,7 +33,74 @@
         apps para sua empresa
       </p>
     </header>
+    <section id="servicos">
+      <h2>SERVIÇOS</h2>
+      <p>
+        Oferecemos os melhores servicos em
+        desenvolvimento de sites e aplicativos
+       </p>
+       <div class="">
+         <img src="img/site.jpg" alt="site"class="img-padrao">
+       </div>
+       <div class="">
+         <img src="img/app.jpeg" alt="app"class="img-padrao">
+       </div>
+    </section>
+    <section id="clientes">
+      <h2>CLIENTES</h2>
+      <p>
+          Nossos clientes fircaram muito satisfeitos
+          com os nossos servicos
+      </p>
+      <div class="">
+        <img src="img/cliente1.jpg" alt="cliente 1" class="img-padrao">
+      </div>
+      <div class="">
+        <img src="img/cliente2.jpg" alt="cliente 2" class="img-padrao">
+      </div>
+    </section>
+    <section id="parceiros">
+      <h2>PARCEIROS</h2>
+      <p>
+        Nossos parceiros nos ajudam a entregar
+        as melhores soluções para os nossos clientes.
+      </p>
+      <div class="">
+        <a href="https://www.academiapme.com.br" target="_blank"><img src="img/academia.jpg" alt="Academia PME" class="img-parceiros"></a>
+      </div>
+      <div class="">
+        <a href="https://digitalinnovation.one" target="_blank"><img src="img/icone.png" alt="Digital Innovation One" class="img-parceiros"></a>
+      </div>
+    </section>
+    <section id="time">
+      <h2>TIME</h2>
+      <p>
+        Nosso time trabalha com muita qualidade e empenho para
+        entregar o melhor produto para os nossos clientes.
+    </p>
+    <div class="">
+      <img src="img/time1.jpg" alt="Time 1" class="img-padrao">
+    </div>
+    <div class="">
+      <img src="img/time2.jpg" alt="Time 2" class="img-padrao">
+    </div>
+    </section>
+    <section id="contato">
+      <h2>CONTATO</h2>
+      <p>
+        Entre em contato com a nossa equipe
+      </p>
+      <div class="">
+        <img src="img/email.jpg" alt="E-mail" class="img-contato">
+        <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+      </div>
+      <div class="">
+        <img src="img/telefone.png" alt="Telefone" class="img-contato">
+        <p><a href="tel:9999999999">(99)9999-9999</a></p>
+      </div>
+    </section>
     <p>Minha "primeira" página</p>
+    <p><p>Texto</p>
     <footer>
       <p>Desenvolvido por Christopher Albert</p>
     </footer>
